--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- CSS ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!-- FONT AWESOME ICONS -->
+    <script src="https://kit.fontawesome.com/67d0306ae4.js" crossorigin="anonymous"></script>
     <!-- My CSS -->
     <link rel="stylesheet" href="/styles.css">
     <title>Hello, world!</title>
@@ -88,6 +90,10 @@
         </nav>
       </div>
 
+    </div>
+
+    <div class="container highlights mt-3 pb-3">        
+        <span><i class="fas fa-highlighter"></i></span><span class="ml-3 ">Highlights</span>        
     </div>
    
 
