--- a/index.html
+++ b/index.html
@@ -94,10 +94,79 @@
 
     <div class="container highlights mt-3 pb-3">        
         <span><i class="fas fa-highlighter"></i></span><span class="ml-3 ">Highlights</span>        
-    </div>
-   
+    </div>   
 
-    <h1>Hello world</h1>
+    <div id="carouselExampleCaptions" class="carousel slide mt-4" data-ride="carousel">
+        <ol class="carousel-indicators mb-n4 mb-lg-n5">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/carousel1.jpg" class="d-block w-100" alt="pic1">
+                <div class="carousel-caption d-none d-md-block">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-left">
+                                    <span><i class="bi bi-windows"></i></span><span class="ml-3">Now Available</span>
+                                    <h5 class="text-left">Day of the tentacle remastered</h5>
+                                </p>
+                            </div>
+                            <div class="col align-self-end text-right">
+                                <h5><span class="d-inline-block carousel-discount px-3 py-2">-50%</span><span class="d-inline-block ml-4" >€ 49.99</span><span class="d-inline-block carousel-add-to-cart px-3 py-2 ml-4"><i class="bi bi-cart-plus"></i> Add  to cart</span></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/carousel2.jpg" class="d-block w-100" alt="pic2">
+                <div class="carousel-caption d-none d-md-block">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-left">
+                                    <span><i class="bi bi-windows"></i></span><span class="ml-3">Now Available</span>
+                                    <h5 class="text-left">Day of the tentacle remastered</h5>
+                                </p>
+                            </div>
+                            <div class="col align-self-end text-right">
+                                <h5><span class="d-inline-block carousel-discount px-3 py-2">-50%</span><span class="d-inline-block ml-4" >€ 49.99</span><span class="d-inline-block carousel-add-to-cart px-3 py-2 ml-4"><i class="bi bi-cart-plus"></i> Add  to cart</span></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/carousel3.jpg" class="d-block w-100" alt="pic3">
+                <div class="carousel-caption d-none d-md-block">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-left">
+                                    <span><i class="bi bi-windows"></i></span><span class="ml-3">Now Available</span>
+                                    <h5 class="text-left">Day of the tentacle remastered</h5>
+                                </p>
+                            </div>
+                            <div class="col align-self-end text-right">
+                                <h5><span class="d-inline-block carousel-discount px-3 py-2">-50%</span><span class="d-inline-block ml-4" >€ 49.99</span><span class="d-inline-block carousel-add-to-cart px-3 py-2 ml-4"><i class="bi bi-cart-plus"></i> Add  to cart</span></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </button>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
