--- a/index.html
+++ b/index.html
@@ -168,6 +168,83 @@
         </button>
     </div>
 
+    <div class="container-fluid container-xl mt-5 ">
+        <div class="row flex-xl-nowrap justify-content-center">
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="card mr-auto ml-auto my-card mb-3 mb-xl-0" style="width: 18rem;">
+                <img src="assets/tile (1).jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="mb-2">Cyberpunk 2077</div>
+                    <div class="d-flex justify-content-between">
+                        <div class="align-self-center"><i class="bi bi-windows"></i></div>
+                        <div class="d-flex">
+                            <div class="align-self-center mr-2 discount-card">-40%</div>
+                            <div>
+                                <div class="strike-discount">€ 15.99</div>
+                                <div><strong>€ 9.99</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="card mr-auto ml-auto my-card mb-3 mb-xl-0" style="width: 18rem;">
+                <img src="assets/tile (1).jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="mb-2">Cyberpunk 2077</div>
+                    <div class="d-flex justify-content-between">
+                        <div class="align-self-center"><i class="bi bi-windows"></i></div>
+                        <div class="d-flex">
+                            <div class="align-self-center mr-2 discount-card">-40%</div>
+                            <div>
+                                <div class="strike-discount">€ 15.99</div>
+                                <div><strong>€ 9.99</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="card mr-auto ml-auto my-card mb-3 mb-xl-0" style="width: 18rem;">
+                <img src="assets/tile (1).jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="mb-2">Cyberpunk 2077</div>
+                    <div class="d-flex justify-content-between">
+                        <div class="align-self-center"><i class="bi bi-windows"></i></div>
+                        <div class="d-flex">
+                            <div class="align-self-center mr-2 discount-card">-40%</div>
+                            <div>
+                                <div class="strike-discount">€ 15.99</div>
+                                <div><strong>€ 9.99</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="card mr-auto ml-auto my-card mb-3 mb-xl-0" style="width: 18rem;">
+                <img src="assets/tile (1).jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="mb-2">Cyberpunk 2077</div>
+                    <div class="d-flex justify-content-between">
+                        <div class="align-self-center"><i class="bi bi-windows"></i></div>
+                        <div class="d-flex">
+                            <div class="align-self-center mr-2 discount-card">-40%</div>
+                            <div>
+                                <div class="strike-discount">€ 15.99</div>
+                                <div><strong>€ 9.99</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
