middle dividers added

--- a/index.html
+++ b/index.html
@@ -245,6 +245,31 @@
         </div>
     </div>
 
+    <div class="middle-divider mt-3">
+        <hr>
+        <div class="container-fluid container-xl">
+            <div class="row mb-n3">
+                <div class="col-8">
+                    <p>We are GOG.COM, the <span>DRM-free</span> home for a <span>curated selection</span>of games. This place was <span>made for gamers</span> 
+                    so make yourself at home.</p>
+                </div>
+                <div class="col-4">
+                    <img src="assets/wierd-circle.png" alt=""> <span><strong>The new GOG GALAXY 2.0</strong></span>
+                </div>
+            </div>        
+         </div>
+        <hr>  
+    </div>
+
+    <div class="container-fluid container-xl">
+        <div class="row mt-4">
+            <div class="col-12">
+                <strong class="text-bigger"><span><i class="bi bi-megaphone"></i></span><span class="ml-4">Flash deals</span></strong>
+                <hr>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
